Updated dolby vision supported devices